@@ -3,4 +3,4 @@ release = 1
 packager = Armijn Hemel <armijn@binaryanalysis.org>
 group = Development/Tools
 doc_files = LICENSE ChangeLog
-requires = python-magic, binutils, e2fsprogs, e2tools, squashfs-tools, fuse, coreutils, module-init-tools, gzip, xz, xz-lzma-compat, zip, unrar, cabextract, unshield, p7zip, cpio, tar, bzip2, mtd-utils, mtd-utils-ubi, lzip, lzop, fuseiso, arj, giflib-utils, gd-progs, icoutils, rpm, rpm-python, gettext, PyXML, bat-extratools >= 7.0, bat-extratools-java >= 7.0, gcc-java, java, upx, poppler-utils, netpbm-progs, libxml2, lrzip, ncompress, python-imaging, vorbis-tools, eot-utils
+requires = python-magic, binutils, e2fsprogs, e2tools, squashfs-tools, fuse, coreutils, module-init-tools, gzip, xz, xz-lzma-compat, zip, unrar, cabextract, unshield, p7zip, cpio, tar, bzip2, mtd-utils, mtd-utils-ubi, lzip, lzop, fuseiso, arj, giflib-utils, gd-progs, icoutils, rpm, rpm-python, gettext, PyXML, bat-extratools >= 7.0, bat-extratools-java >= 7.0, gcc-java, java, upx, poppler-utils, netpbm-progs, libxml2, lrzip, ncompress, python-imaging, vorbis-tools, eot-utils, libmp4v2
